# wordcloud-api

./: .coverage  .pre-commit-config.yaml  README.md  pyproject.toml  run.sh
.github/workflows/: lint.yaml  run-tests.yaml  test.yaml
scripts/: install_nltk_deps.py
src/wordcloud_api/: app.py
test-reports/: .coverage  coverage.xml  report.xml
tests/unit_tests/: test_app.py
